--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </section>
     </main>
     <footer>
-      <p>Copyright © 2021 John Doe</p>
+      <p>Copyright © 2023 Cem Tekin</p>
     </footer>
   </body>
 </html>
