--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>My Personal Website</title>
   </head>
   <body>
@@ -19,21 +20,32 @@
     </header>
 
     <main>
-      <section id="about">
-        <h1>About Me</h1>
-        <p>
-          Hello, my name is Cem David Tekin and I am a web developer. I have
-          been working in the industry for 2 days and have experience in HTML,
-          CSS, and JavaScript. I am passionate about creating clean and
-          user-friendly websites, and am always looking to learn new skills and
-          technologies.
-        </p>
+      <section id="about" class="section">
+        <div class="container">
+          <h1 class="section-title">About Me</h1>
+          <div class="row">
+            <div class="col-sm-12 col-md-4">
+              <img src="profile-picture.jpg" alt="Profile Picture" class="profile-picture">
+            </div>
+            <div class="col-sm-12 col-md-8">
+              <p class="about-text">
+                Hello, my name is Cem David Tekin and I am a web developer. I have
+                been working in the industry for 2 days and have experience in HTML,
+                CSS, and JavaScript. I am passionate about creating clean and
+                user-friendly websites, and am always looking to learn new skills and
+                technologies.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
-      <section id="experience">
-        <h1>Experience</h1>
-        <h2>Web Developer - Neue Fische</h2>
-        <p>
+      <section id="experience" class="section">
+        <div class="container">
+          <h1 class="section-title">Experience</h1>
+          <div class="experience-item">
+            <h2 class="experience-title">Web Developer - Neue Fische</h2>
+            <p class="experience-text">
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
           nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
           sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
@@ -46,21 +58,25 @@
         </p>
       </section>
 
-      <section id="projects">
-        <h1>Projects</h1>
-        <ul>
-          <li><a href="#">Project 1</a></li>
-          <li><a href="#">Project 2</a></li>
-          <li><a href="#">Project 3</a></li>
-        </ul>
+      <section id="projects" class="section">
+        <div class="container">
+          <h1 class="section-title">Projects</h1>
+          <ul>
+            <li><a href="#">Project 1</a></li>
+            <li><a href="#">Project 2</a></li>
+            <li><a href="#">Project 3</a></li>
+          </ul>
+        </div>
       </section>
 
-      <section id="contact">
-        <h1>Contact</h1>
-        <p>
-          You can contact me by email at cem276@outlook.de or by phone at
-          000-000-0000.
-        </p>
+      <section id="contact" class="section">
+        <div class="container">
+          <h1 class="section-title">Contact</h1>
+          <p>
+            You can contact me by email at cem276@outlook.de or by phone at
+            000-000-0000.
+          </p>
+        </div>
       </section>
     </main>
     <footer>
