--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1 class="section-title">About Me</h1>
           <div class="row">
             <div class="col-sm-12 col-md-4">
-              <img src="profile-picture.jpg" alt="Profile Picture" class="profile-picture">
+              <img src="https://pfpmaker.com/_nuxt/img/profile-3-1.3e702c5.png" alt="Profile Picture" class="profile-picture">
             </div>
             <div class="col-sm-12 col-md-8">
               <p class="about-text">
