--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
           <h1 class="section-title">About Me</h1>
           <div class="row">
             <div class="col-sm-12 col-md-4">
-              <img src="https://pfpmaker.com/_nuxt/img/profile-3-1.3e702c5.png" alt="Profile Picture" class="profile-picture">
+              <img
+                src="https://pfpmaker.com/_nuxt/img/profile-3-1.3e702c5.png"
+                alt="Profile Picture"
+                class="profile-picture"
+              />
             </div>
             <div class="col-sm-12 col-md-8">
               <p class="about-text">
-                Hello, my name is Cem David Tekin and I am a web developer. I have
-                been working in the industry for 2 days and have experience in HTML,
-                CSS, and JavaScript. I am passionate about creating clean and
-                user-friendly websites, and am always looking to learn new skills and
-                technologies.
+                Hello, my name is Cem David Tekin and I am a web developer. I
+                have been working in the industry for 2 days and have experience
+                in HTML, CSS, and JavaScript. I am passionate about creating
+                clean and user-friendly websites, and am always looking to learn
+                new skills and technologies.
               </p>
             </div>
           </div>
@@ -46,16 +50,19 @@
           <div class="experience-item">
             <h2 class="experience-title">Web Developer - Neue Fische</h2>
             <p class="experience-text">
-          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-          ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-          sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-          et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
-          takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+              erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
+              amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam
+              voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
+              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+              dolor sit amet.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section id="projects" class="section">
