--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>My Personal Website</title>
   </head>
   <body>
+    <section class="wrapper">
+      <div id="stars"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </section>
     <header>
       <nav>
         <ul>
