--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </div>
             <div class="col-sm-12 col-md-8">
               <p class="about-text">
-                Hello, my name is Cem David Tekin and I am a web developer. I
-                have been working in the industry for 2 days and have experience
-                in HTML, CSS, and JavaScript. I am passionate about creating
-                clean and user-friendly websites, and am always looking to learn
-                new skills and technologies.
+                I'm Cem David Tekin, a motivated upcoming web developer learning
+                the latest tech at a bootcamp. My skills include HTML, CSS,
+                JavaScript and more. My goal is to create user-friendly websites
+                and always learning new skills. Excited to embark on this
+                journey!
               </p>
             </div>
           </div>
@@ -55,16 +55,13 @@
           <div class="experience-item">
             <h2 class="experience-title">Web Developer - Neue Fische</h2>
             <p class="experience-text">
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-              sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-              amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
-              invidunt ut labore et dolore magna aliquyam erat, sed diam
-              voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-              dolor sit amet.
+              I'm currently enrolled in a web development bootcamp called 'neue
+              fische' where I'm learning to code like a pro. With hands-on
+              training and real-world experience, I'll be a web development
+              ninja in no time. The instructors are pros and the interactive
+              approach makes it a blast. If you're looking to start a career in
+              web development, I highly recommend giving 'neue fische' a try (or
+              at least checking out my website after I graduate).
             </p>
           </div>
         </div>
